@@ -78,7 +78,62 @@
 	      <property name="fill">False</property>
 	    </packing>
 	  </child>
+	  
+	  <child>
+	    <widget class="GtkHBox" id="preferences_box_wget_args">
+	      <property name="visible">True</property>
+	      <property name="homogeneous">False</property>
+	      <property name="spacing">6</property>
+			  
+	      <child>
+	        <widget class="GtkLabel" id="preferences_label_wget_args">
+	          <property name="visible">True</property>
+	          <property name="label" translatable="yes">Wget arguments</property>
+	          <property name="use_underline">False</property>
+	          <property name="use_markup">False</property>
+	          <property name="justify">GTK_JUSTIFY_LEFT</property>
+	          <property name="wrap">False</property>
+	          <property name="selectable">False</property>
+	          <property name="xalign">0</property>
+	          <property name="yalign">0.5</property>
+	          <property name="xpad">0</property>
+	          <property name="ypad">0</property>
+	        </widget>
+	        <packing>
+	          <property name="padding">0</property>
+	          <property name="expand">True</property>
+	          <property name="fill">True</property>
+	        </packing>
+	      </child>
 
+	      <child>
+	        <widget class="GtkEntry" id="preferences_entry_wget_args">
+	          <property name="visible">True</property>
+	          <property name="tooltip" translatable="yes">Arguments (in addition to timeout and output file) passed to wget when fetching exchange rates.</property>
+	          <property name="can_focus">True</property>
+	          <property name="editable">True</property>
+	          <property name="visibility">True</property>
+	          <property name="max_length">0</property>
+	          <property name="text" translatable="yes"></property>
+	          <property name="has_frame">True</property>
+	          <property name="invisible_char" translatable="yes">*</property>
+	          <property name="activates_default">False</property>
+	          <signal name="changed" handler="on_preferences_entry_wget_args_changed" last_modification_time="Wed, 05 Oct 2004 12:32:14 GMT"/>
+	        </widget>
+	        <packing>
+	          <property name="padding">0</property>
+	          <property name="expand">True</property>
+	          <property name="fill">True</property>
+	        </packing>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="padding">0</property>
+	      <property name="expand">True</property>
+	      <property name="fill">True</property>
+	    </packing>
+	  </child>
+	  
 	  <child>
 	    <widget class="GtkCheckButton" id="preferences_checkbutton_save_mode">
 	      <property name="visible">True</property>
